crates/data-dict/tests/snapshots/validate_spec__s07_enum_without_values.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-enum-without-values.yaml\")"
---
Error: [S07] An `enum` column must list its categories with `values`.
   ╭─[ spec/s07-enum-without-values.yaml:9:15 ]
   │
 6 │   table:
   │ 
 8 │       - name: c
 9 │         type: enum
   │               ──┬─  
   │                 ╰─── has type `enum` but is missing `values`
───╯
